# kube-fake-client-rs

./: .git-town.toml  .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  RELEASE.md  cliff.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: README.md  ci.yml  dependabot-auto-merge.yml  release.yml  update-pr-stack.yml
docs/: STRATEGIC_MERGE_PATCH.md
examples/: README.md  basic_usage.rs  controller.rs  custom_resource.rs  fixture_loading.rs  interceptors.rs  schema_validations.rs  status_controller.rs
fixtures/: configmap.yaml  deployment.yaml  pods.yaml
src/: builder.rs  builder_test.rs  client.rs  client_test.rs  client_utils.rs  client_utils_test.rs  discovery.rs  error.rs  field_selectors.rs  interceptor.rs  label_selector.rs  label_selector_test.rs  lib.rs  mock_service.rs  mock_service_test.rs  registry.rs  tracker.rs  tracker_test.rs  utils.rs  utils_test.rs  validator.rs
