[package]
name = "kube-fake-client"
version = "0.1.4"
edition = "2021"
authors = ["Rob Lyon <rob@ctxswitch.com>"]
description = "An implimentation of controller-runtime's fake client for rust"
license = "Apache-2.0"
repository = "https://github.com/ctxswitch/kube-fake-client-rs"

[lib]
name = "kube_fake_client"
path = "src/lib.rs"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "controller"
path = "examples/controller.rs"

[[example]]
name = "custom_resource"
path = "examples/custom_resource.rs"

[[example]]
name = "fixture_loading"
path = "examples/fixture_loading.rs"

[[example]]
name = "status_controller"
path = "examples/status_controller.rs"

[[example]]
name = "interceptors"
path = "examples/interceptors.rs"

[[example]]
name = "schema_validations"
path = "examples/schema_validations.rs"
required-features = ["validation"]

[[bin]]
name = "discovery-gen"
path = "bin/discovery-gen.rs"

[[bin]]
name = "immutable-gen"
path = "bin/immutable-gen.rs"

[dependencies]
kube = { version = "2.0.1", features = ["client", "derive", "jsonpatch"] }
k8s-openapi = { version = "0.25", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
schemars = "0.8"
tokio = { version = "1.0", features = ["full", "sync"] }
thiserror = "2.0"
async-trait = "0.1"
json-patch = "4.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
rand = "0.9"
tower = "0.5"
http = "1.0"
http-body-util = "0.1"
bytes = "1.0"
futures = "0.3"
urlencoding = "2.1"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking"] }
tera = { version = "1.20" }
jsonschema = "0.17"
once_cell = "1.20"
phf = { version = "0.11", features = ["macros"] }

[features]
default = ["v1_30"]

# Kubernetes API version features - only one should be enabled at a time
v1_30 = ["k8s-openapi/v1_30"]
v1_31 = ["k8s-openapi/v1_31"]
v1_32 = ["k8s-openapi/v1_32"]
v1_33 = ["k8s-openapi/v1_33"]

# Additional features
validation = []  # Enable OpenAPI schema validation with automatic lazy loading

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }
